--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.userosscache
 *.sln.docstates
 *.icloud
+waiwong.github.io.sln
+Web*.config
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
